--- a/Incentive-Calc.html
+++ b/Incentive-Calc.html
@@ -35,8 +35,8 @@
         <h3>Admin Panel</h3>
         <div class="input-group">
             <label for="excelUpload">Upload Employee Data (Excel):</label>
-            <input type="file" id="excelUpload" accept="https://github.com/neupane1989/Area2/blob/main/Data.xlsx
-        </div>
+            <input type="file" id="excelUpload"https://github.com/neupane1989/Area2/blob/main/Data.xlsx">
+
     </div>
 
     <!-- User Interface -->
